--- a/index.html
+++ b/index.html
@@ -266,15 +266,15 @@
           imageHeight: 120,
         })
         await swalst.fire({
-          title: "Berdoa Sendiri saja aa, Nanti so mo aminkan",
+          title: "Keberhasilan bukanlah milik orang yang pintar. Keberhasilan adalah kepunyaan mereka yang senantiasa berusaha. <br> Bj Habibie",
           imageUrl: "img/5.jpg",
           imageWidth: 120,
           imageHeight: 120,
         })
-        text = "Keberhasilan bukanlah milik orang yang pintar. Keberhasilan adalah kepunyaan mereka yang senantiasa berusaha. <br> Bj Habibie"
+      text = "Jika Kamu tidak sanggup menahan lelahnya belajar maka kamu harus sanggup menahan perihnya kebodohan. <br Imam Syafi’i"
         emotnama = ""
-        text2 = "Jika Kamu tidak sanggup menahan lelahnya belajar maka kamu harus sanggup menahan perihnya kebodohan. <br Imam Syafi’i"
-        text3 = "Selamat Hari Guru Seluruh Tentor Kids Clever Bimbel Gorontalo <br> Yang dapat kado ini tolong hubungi <a href='https://instagram.com/adithairun'> Saya Yaa </a>"
+        
+        text2 = "Selamat Hari Guru Seluruh Tentor Kids Clever Bimbel Gorontalo <br> Yang dapat kado ini tolong hubungi <a href='https://instagram.com/adithairun'> <font color>Saya Yaa</font> </a>"
         showDiv()
       }
       mulaitanya()
