--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <script type="text/javascript">
       function play() {
         var audio = new Audio(
-          "mp3/hbd-gitar-1.mp3"
+          "mp3/hgn.mp3"
         )
         audio.play()
       }
@@ -274,7 +274,7 @@
       text = "Jika Kamu tidak sanggup menahan lelahnya belajar maka kamu harus sanggup menahan perihnya kebodohan. <br Imam Syafi’i"
         emotnama = ""
         
-        text2 = "Selamat Hari Guru Seluruh Tentor Kids Clever Bimbel Gorontalo <br> Yang dapat kado ini tolong hubungi <a href='https://instagram.com/adithairun'> <font color>Saya Yaa</font> </a>"
+        text2 = "Selamat Hari Guru Untuk Seluruh Tentor Kids Clever Bimbel Gorontalo."
         showDiv()
       }
       mulaitanya()
